pasa tags por get y encuentra el view

--- a/templates/portags/interior.htm
+++ b/templates/portags/interior.htm
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>por[tags].com</title>
-<link href="css/estilo.css" rel="stylesheet" type="text/css" />
+<link href="../../portags/static/css/estilo.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <div id="page2">
         <div id="wrap">
-   			<div id="logo_interior"><img src="images/portags_blanco.gif" /></div>
+   			<div id="logo_interior"><img src="../../portags/static/images/portags_blanco.gif" /></div>
             	<div id="user_interior">
 					<form id="user1" name="user" method="post" action="">
                         <label>Usuario: 
@@ -27,7 +27,7 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <p align="center"><a href="index.htm" target="_self">anterior</a></p>
+            <p align="center"><a href="tag_list.html" target="_self">anterior</a></p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
