--- a/templates/portags/tag_result.html
+++ b/templates/portags/tag_result.html
@@ -3,18 +3,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>por[tags].com</title>
-<link href="/site_media/css/estilo.css" rel="stylesheet" type="text/css" />
+<link href="/media/css/estilo.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <div id="page2">
         <div id="wrap">
-   			<div id="logo_interior"><img src="/site_media/images/portags_blanco.gif" /></div>
+   			<div id="logo_interior"><img src="/media/img/portags_blanco.gif" /></div>
             	<div id="user_interior">
 					
           		</div>
           <div id="contenido_interior">
-            <iframe src="http://www.google.com" width="100%" height="100%" />
+            <iframe src="http://www.google.com/search?q={{ tag }}" width="100%" height="100%" />
           </div>
     </div>
 </div>
