--- a/templates/portags/tag_list.html
+++ b/templates/portags/tag_list.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>por[tags].com</title>
-<link href="/site_media/css/estilo.css" rel="stylesheet" type="text/css" />
+<link href="/media/css/estilo.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <div id="page1">
     <div id="wrap">
-        <div id="logo"><img src="/site_media/images/portags.gif" alt="portags" width="383" height="74" />
+        <div id="logo"><img src="/media/img/portags.gif" alt="portags" width="383" height="74" />
         </div>
         <div id="user">
               
@@ -27,7 +27,7 @@
     	<div id="content">
           {% if object_list %}
                 {% for object in object_list %}
-                    <a href="/polls/{{ object.id }}/">{{ object.question }}</a>
+                    <a href="/search/?tags={{ object.nombre }}"><span style="font-size:{{ object.numero_busquedas }}em">{{ object.nombre }}</span></a>
                 {% endfor %}
            {% else %}
                 <p>No tags are available.</p>
