--- a/portags/static/css/estilo.css
+++ b/portags/static/css/estilo.css
@@ -14,6 +14,7 @@ body {
 	margin-bottom: 0px;
 	height:100%;
 }
+
 #page1{
 background-image: url(../img/fondo-gris-negro.jpg);
 	background-repeat: repeat-x;
@@ -69,13 +70,7 @@ font-size:12px;
 	height:auto;
 	margin:auto;
 }
-#contenido_interior{
-position:relative;
-	width:800px;
-	height:auto;
-	margin:auto;
-	font-size:12px;
-}
+
 #page2{
 width:100%;
 background: #ffffff url(../img/header_interior.jpg);
@@ -84,28 +79,27 @@ margin:auto;
 
 }
 #logo_interior{
-position:relative;
-top:10px;
-left:5px;
-width:250px;
-z-index:2;
-
+    position:relative;
+    top:10px;
+    left:5px;
+    width:250px;
+    z-index:2;
+    height:80px;
 }
-#user_interior {
-	color:#fff;
-	position: relative;
-	left:310px;
-	top:-33px;
-	width:450px;
-	height:30px;
-	z-index:1;
-	padding:5px;
-	font-size:12px;
-}
-#user_interior a{
-	color:#fff;
-	text-decoration: underline;}
 
-#user_interior a:hover{
-	color:#fff;
-	text-decoration: underline;}
+.gsc-control{
+    font-size:medium;
+    width:100%;
+    height:100%;
+    margin:10px;
+}
+
+.gsc-search-box{
+    visibility:collapse;
+    height:0px;
+}
+
+.gsc-resultsHeader{
+    visibility:collapse;
+    height:0px;
+}
