--- a/templates/portags/tag_result.html
+++ b/templates/portags/tag_result.html
@@ -32,6 +32,15 @@
     <body>
     <div id="page2">
         <div id="logo_interior"><img src="/media/img/portags_blanco.gif" /></div>
+        <div id="tags_relacionados">
+         {% if tags %}
+                {% for object in tags.all %}
+                    <a href="/search/?tags={{ tag }} {{ object }}">{{ object.nombre }}</a>
+                {% endfor %}
+           {% else %}
+                <p>No tags are available.</p>
+           {% endif %}
+        </div>
         <div id="searchcontrol"></div>
     </div>
     </body>
