--- a/templates/portags/tag_result.html
+++ b/templates/portags/tag_result.html
@@ -20,7 +20,7 @@
                 searchControl.draw(document.getElementById("searchcontrol"));
 
                 // Execute an inital search
-                searchControl.execute("{{ tag }}");
+                searchControl.execute("{{ search }}");
                 }
                 google.setOnLoadCallback(OnLoad);
 
@@ -33,9 +33,9 @@
     <div id="page2">
         <div id="logo_interior"><img src="/media/img/portags_blanco.gif" /></div>
         <div id="tags_relacionados">
-         {% if tags %}
-                {% for object in tags.all %}
-                    <a href="/search/?tags={{ tag }} {{ object }}">{{ object.nombre }}</a>
+         {% if relacionados %}
+                {% for object in relacionados %}
+                    <a href="/search/?tags={{ search }} {{ object }}">{{ object.nombre }}</a>
                 {% endfor %}
            {% else %}
                 <p>No tags are available.</p>
