--- a/portags/static/css/estilo.css
+++ b/portags/static/css/estilo.css
@@ -87,6 +87,10 @@ margin:auto;
     height:80px;
 }
 
+#tags_relacionados{
+	font-size:medium;
+}
+
 .gsc-control{
     font-size:medium;
     width:100%;
